--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.1.0",
     "@azure/msal-angular": "^4.0.19",
     "@azure/msal-browser": "^4.22.0",
+    "firebase": "^12.2.1",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.15",
